# datashelf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  datashelf_config.yaml  example.yaml  new_init_test.ipynb  planning.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  sprint.md  tag-advice.md  test.ipynb  v0.2.0-changes.md
.datashelf/: config.yaml  datashelf_metadata.yaml  metadata.yaml
.datashelf/fy_2025_revenue/: basic_data_raw.csv  fy_2025_revenue_metadata.yaml
datashelf/: __init__.py  checkout.py  cli.py  core.py  init.py  inspect.py  load.py  save.py  utils.py
datashelf/core/: __init__.py  config.py  create_collection.py  delete.py  directory.py  display.py  hashing.py  init.py  load.py  metadata.py  save.py
datashelf/utils/: collection.py  hashing.py  logging.py  shelf.py  tools.py
docs/: README.md  advanced-usage.md  cli-reference.md  getting-started.md  troubleshooting.md
examples/: datashelf_v010.ipynb
examples/.datashelf/: datashelf_metadata.yaml
examples/.datashelf/customer_analytics/: customer_analytics_metadata.yaml  customer_profiles_raw.csv
examples/.datashelf/sales_analysis_2024/: quarterly_sales_enriched.csv  quarterly_sales_raw.csv  sales_analysis_2024_metadata.yaml  sales_summary_final.csv
examples/v0.1.0/: datashelf_v010.ipynb  marimo_datashelf_v010.py
examples/v0.2.0/: datashelf_v020.ipynb  datashelf_v020_diff.ipynb
sandbox/: error.ipynb  test_utils_datashelf.ipynb
sandbox/v0.1.0/: init_error.ipynb  sandbox.ipynb  test_init_create.ipynb  test_utils_collections.ipynb
tests/: conftest.py  test_checkout.py  test_core_functionality.py  test_create_collection.py  test_edge_cases.py  test_init copy.py  test_init.py  test_inspect.py  test_integration_scenarios.py  test_load copy.py  test_save copy.py
