[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datashelf"
version = "0.1.0"
description = "A local dataset tracking tool."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Rohan" }
]
keywords = ["data", "datasets", "tracking", "versioning", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "pandas>=2.3,<3.0",
  "PyYAML>=6.0,<7.0",
  "fastparquet>=2025.12.0",
  "openpyxl>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[project.scripts]
datashelf = "datashelf.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["datashelf", "datashelf.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
