[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datashelf-py"
version = "0.1.2"
description = "A local dataset tracking tool."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Rohan Krishnan", email = "krishnan.rohan@outlook.com" }
]
keywords = ["data", "datasets", "tracking", "versioning", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "pandas>=1.5,<3.0",
  "PyYAML>=6.0,<7.0",
  "fastparquet>=2023.1.0",
  "openpyxl>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/r0hankrishnan/datashelf"
Repository = "https://github.com/r0hankrishnan/datashelf"
Issues = "https://github.com/r0hankrishnan/datashelf/issues"

[project.scripts]
datashelf = "datashelf.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["datashelf", "datashelf.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]